# pkpd_project

./: .gitignore  EDA.ipynb  Funtoin_Sim.smlx  Funytoin.mlxtran  Project_presentation.pptx  README.md  pyproject.toml
Funtoin_Sim/: Funtoin_Sim.smlxproperties
Funtoin_Sim/.Internals/: Funtoin_Sim.smlx
Funtoin_Sim/ExternalFiles/: mlx_Adm1.txt  mlx_Adm2.txt  mlx_CondDistSample.txt  mlx_CondMean.txt  mlx_Cov.txt  mlx_DV.txt  mlx_EBEs.txt  mlx_PopIndivCov.txt  mlx_subjects.txt
Funtoin_Sim/ModelFile/: model_V1.txt
Funtoin_Sim/Simulation/: doses.txt  individualParameters.txt  populationParameters.txt
Funytoin/: model_V1.txt  model_V2.txt  populationParameters.txt  populationParametersByGroups.txt  predictions.txt  summary.txt
Funytoin/.Internals/: Funytoin.mlxtran
Funytoin/ChartsData/.Internals/: Funytoin.mlxtran
Funytoin/FisherInformation/: correlationEstimatesSA.txt  covarianceEstimatesSA.txt
Funytoin/IndividualParameters/: estimatedIndividualParameters.txt  estimatedRandomEffects.txt  shrinkage.txt  simulatedIndividualParameters.txt  simulatedRandomEffects.txt
Funytoin/ModelBuilding/: modelBuilding.txt
Funytoin/ModelBuilding/ModelBuilding_001/: ModelBuilding_001.mlxtran
Funytoin/ModelBuilding/ModelBuilding_001/ModelBuilding_001/: populationParameters.txt  summary.txt  (+1 more)
Funytoin/Tests/: correlationIndividualParametersCovariates.txt  correlationRandomEffects.txt  correlationRandomEffectsCovariates.txt  fixedEffects.txt  normalityIndividualParameters.txt  normalityRandomEffects.txt  normalityResiduals.txt  symmetryResiduals.txt
data/: Funytoin_data.csv
(+8 files in other folders)
